Wrote some more

--- a/problems.Rmd
+++ b/problems.Rmd
@@ -29,9 +29,9 @@ This chapter attempts to clarify some of this conceptual ambiguity. Mirroring th
 
 ## Partitioning
 
-The first step of any data visualization pipeline is to divide the data into parts or subsets. The justification for this initial step lies in our ultimate goal: to draw one or (usually) more geometric objects [@wilkinson2012; also known as graphic items, @wills2008], representing some aspects of our data. Thus, before we can do anything else, we need to define the set of data points each geometric object will represent. In the typical case of two-dimensional tables or data frames, this amounts to slicing the table's rows into smaller sub-tables. 
+The first step of any data visualization pipeline is to divide the data into parts or subsets. The justification for this initial step lies in our ultimate goal: to represent some aspects of our data by drawing one or (usually) more geometric objects [@wilkinson2012; also known as "marks", @satyanarayan2016; @bostock2022; and "graphic items", @wills2008]. However, before we can do anything else, we need to define the set of data points each geometric object will represent. In the typical case of two-dimensional tables or data frames, this amounts to slicing the data set into multiple smaller sets of rows or tables. 
 
-The partitioning operation is fairly intuitive for aggregate plots, where each object represents multiple rows of the data. For instance, in a barplot, each bar represents a set of cases corresponding to a category, while in histogram, each bar represents a set of cases in which fall within the same bin along some continuous dimension. However, even one-to-one representations of the data can be viewed this way. For example, in a scatterplot or parallel coordinate plots, each geometric object represents one row of the data, which we can view as its own small table. Similarly, plots with a single geometric object (e.g. density/radar plots) have the underlying set equal to the whole data set.
+The partitioning operation is fairly intuitive for aggregate plots, where each object represents several rows of the data. For instance, in a barplot, each bar represents the subset of cases corresponding to a single category, while in histogram, each bar represents the subset of cases which fall within the same bin along some continuous dimension. However, even one-to-one representations of the data may be viewed this way. For example, in scatterplots and parallel coordinate plots, geometric objects (points, lines) can be thought of as representing many small tables of one row each. Similarly, in plots with a single geometric object (e.g. density/radar plots), the corresponding data subset is just the whole data set.
 
 Thus, the process of splitting our data into subsets is in some way fairly straightforward. However, it does raise two fundamental questions:
 
@@ -1226,9 +1226,13 @@ In some data visualization systems, a single frame is used to construct the enti
 - Objects layer
 - Background layer
 
-Additionally, in some data visualization systems, certain elements of the visualization may be rendered out-of-frame entirely. For instance, in web-based interactive visualization frameworks, some elements may be represented via external DOM nodes, e.g. a query pop-up may be represented via a `div`/`table` element, independent of the `canvas`/`svg` element used to render the data. This can simplify rendering logic - for example, in the case of the query pop-up, we can offload the work of rendering the table to the browser, instead of having to implement the logic of rendering a table manually.   
+Additionally, in some data visualization systems, certain elements of the visualization may be rendered out-of-frame entirely. For instance, in web-based interactive visualization frameworks, some elements may be represented via external DOM nodes, e.g. a query pop-up may be represented via an independent `<div>`/`<table>` element. This can simplify rendering logic: for instance, in the case of the query pop-up, we can offload the work of rendering the table to the browser instead of having it to implement it ourselves. Similarly, many GUI platforms (including browsers) provide ready-made interactive inputs, such as buttons or sliders. 
 
-#### Graphical elements
+### Graphical elements
 
-The graphical elements may include geometric objects which are direct representations of the data, such as points, lines, or areas, as well as auxiliary elements such as axis breaks and labels, grid-lines, titles, and additional annotations.
+To create a data visualizations, frames need to be populated with graphical elements. These include geometric objects which represent the data directly, such as points, lines, or rectangles, as well as auxiliary graphical elements such as axis breaks and labels, grid-lines, titles, and additional annotations.
+
+Geometric objects directly representing the data are of primary concern, since these are the most likely cause of rendering bottle-necks: typically, they are the most numerous class of elements as well as the most likely to require re-rendering upon interaction. For instance, in scatterplots and lineplots, the number of geometric objects is exactly equivalent to the number of rows. Likewise, in barplots and fluctuation diagrams, larger data set size often implies a greater number of categories and as a consequence more objects to be rendered. Similarly, most interactive features affect the geometric objects in some way, necessitating re-rendering. For instance, zooming, panning, and reordering affect the objects' position and/or size, while selection and parametric interaction affect the objects internal attributes, as well as the number of objects to render itself.
+
+In contrast, auxiliary graphical elements are typically few in number, and require re-rendering less frequently. For instance, in a typical plot with continuous axes, there are generally only 4-6 labels for each axis (as an example, in R, the `pretty` function uses `n = 5` as the default number of *desired* intervals used to find axis breaks) and a single title. With two axes, that amounts to 10-14 text strings that need to be rendered, which is generally much less than the number of geometric objects. Additionally, as was mentioned in Section \@(stacking-part-whole), with monoidal plots like stacked barplots and histograms, axis labels do not have be to be re-rendered during linked selection. They *do* need to be re-rendered during zooming and panning, for obvious reasons, however, this is typically fairly cheap. Axis titles need to be re-rendered only during certain kinds of representation switching, such as when switching from a barplot to spineplot.
 
