--- a/problems.Rmd
+++ b/problems.Rmd
@@ -220,14 +220,15 @@ render_table <- function(x, ...) {
 } 
 
 render_tables <- function(x) {
-  n <- length(x)
-  n_pairs <- floor(n / 2)
-
-  for (i in seq_len(n_pairs)) {
-    cat(knitr::kables(lapply(x[(2 * i - 1):(2 * i)], render_table)))
-  }
-  
-  if (n %% 2 == 1) render_table(x[[length(x)]])
+  # n <- length(x)
+  # n_pairs <- floor(n / 2)
+  # 
+  # for (i in seq_len(n_pairs)) {
+  #   cat(knitr::kables(lapply(x[(2 * i - 1):(2 * i)], render_table)))
+  # }
+  # 
+  # if (n %% 2 == 1) render_table(x[[length(x)]])
+  knitr::kable(x)
 }
 
 render_table(df, row.names = TRUE)
@@ -380,7 +381,6 @@ To summarize the main point of this entire section, *graphs are graphs*. As a bi
 ```{r meme}
 #| echo: false
 #| fig-cap: "A joke image shared in the Mathematical Mathematics Memes Facebook group on the 28th of March, 2024 [@mathematicalmathematics2024]."
-#| out-extra: 'style="border:1px solid black;"'
 #| out-width: 75%
 knitr::include_graphics("./figures/graphs-cosplayers.jpg")
 ```
@@ -685,10 +685,8 @@ $$F(- \cup D_i \cup D_j) = - \otimes F(D_i) \otimes F(D_j)$$
 Finally, without loss of generality, we can choose the empty set $\varnothing$ as the subset being operated on ($-$), and then the equation reduces to:
 
 \begin{equation}
-
 F(D_i \cup D_j) = F(D_i) \otimes F(D_j)
 (\#eq:summary-functor-composition)
-
 \end{equation}
 
 In other words, when summarizing data, *it should not matter whether we first take the union of the underlying data and then summarize the resulting superset, or first summarize the subsets and then combine the summaries via the combination operator $\otimes$ (i.e. the summary should distribute across set union)*.
@@ -696,10 +694,8 @@ In other words, when summarizing data, *it should not matter whether we first ta
 Finally, we should note that, to be fully functorial, the operation should also preserve identities:
 
 \begin{equation}
-
 F(\text{id}_{D_i}) = \text{id}_{F(D_i)}
 (\#eq:summary-functor-identity)
-
 \end{equation}
 
 #### Functorial summaries and set union
@@ -707,7 +703,6 @@ F(\text{id}_{D_i}) = \text{id}_{F(D_i)}
 Let's explore the functoriality of summary statistics in more concrete terms. First, as was mentioned in Section \@ref(plots-as-preorders), the identity morphism for a data subset is just union with the empty set, $- \cup \varnothing$. Therefore, preserving identities as per Equation \@ref(eq:summary-functor-identity) amounts to:
 
 \begin{align}
-
 F(\text{id}_{D_i}) &= F(D_i \cup \varnothing) \\
                    &= F(D_i) \otimes F(\varnothing) \\ 
                    &= F(D_i) \otimes e \\
@@ -731,11 +726,9 @@ $$F(d_1 \cup d_2 \cup \ldots d_k) = d_1 \otimes d_2 \otimes \ldots d_n$$
 Just to drive the point home, we can also follow the equality the other way, starting with combining the summaries of two data subsets $F(D_i)$ and $F(D_j)$. Then:
 
 \begin{align}
-
 F(D_i) \otimes F(D_j) &= (d_{i1} \otimes d_{i2} \otimes \ldots d_{in}) \otimes (d_{j1} \otimes d_{j1} \otimes \ldots d_{jk}) \\
 &= d_{i1} \otimes d_{i2} \otimes \ldots d_{in} \otimes d_{j1} \otimes d_{j1} \otimes \ldots d_{jk} \qquad \text{(by associativity)} \\
 &= F(D_i \cup D_j)
-
 \end{align}
 
 Again, this shows that combining summaries leads to a valid summary of the underlying set union, which is precisely the desired property we set out to find.
@@ -826,12 +819,10 @@ Finally, monoids also imply certain computational advantages. Specifically, beca
 Suppose we have our summary functor $F$ which summarizes a data subset $D_i$ by repeatedly applying some monoidal operation $\otimes$. As we have shown, given two data subsets $D_i$ and $D_j$, $F(D_i) \otimes F(D_j) = F(D_i \cup D_j)$. More concretely, with data subsets $D_1, D_2, D_3, \ldots$, it is the case that, for example:
 
 \begin{align}
-
 &F(D_1) = F(D_1) \\
 &F(D_1) \otimes F(D_2) = F(D_1 \cup D_2) \\
 &F(D_1) \otimes F(D_2) \otimes F(D_3) = F(D_1 \cup D_2 \cup D_3) \\
 &F(D_1) \otimes F(D_2) \otimes F(D_3) \otimes \ldots = F(D_1 \cup D_2 \cup D_3 \cup \ldots)
-
 \end{align}
 
 Now, comparing the statistic $F(D_1)$ with $F(D_1) \otimes F(D_2)$ amounts to comparing the summaries of $D_1$ with that of $D_1 \cup D_2$. For instance, in a barplot where $D_{S_1}$ and $D_{S_2}$ represent segment subsets that together form a bar subset, $D_{B_1} = D_{S_1} \cup D_{S_2}$, comparing $F(D_{S_1})$ and $F(D_{S_1}) \otimes F(D_{S_2})$ amounts to comparing the summary on the subset $D_{S_1}$ with that of $D_{S_1} \cup D_{S_2}$, i.e. the summary of all cases in the bar.
@@ -985,7 +976,6 @@ Simple linear maps like the one in Definition \@ref(def:linear-mapping) can work
 While a single function could handle all these tasks, adding all of the required arguments might make it overly complex and difficult to reason about. Let's take the first point in the list above as a motivating example. Consider what happens to data points at the limits of the data range under the simple linear mapping:   
 
 ```{r}
-#| out-width: 800px
 #| fig-align: 'center'
 set.seed(123456)
 x <- 1:10
@@ -1001,7 +991,6 @@ The plot above shows values scaled using the simple linear mapping along the x-a
 To address this problem, most data visualization systems automatically expand the range of the domain by some pre-specified percentage:
 
 ```{r}
-#| out-width: 800px
 #| fig-align: 'center'
 # By default, the base R plot() function automatically expands the x- and y-axis
 # limits by approximately 4% on each end, see `xaxs` in ?graphics::par
@@ -1011,20 +1000,16 @@ plot(x, y, col = col, cex = 3, pch = 19)
 We could achieve this by expanding our data range by some pre-specified percentage, for example, a symmetric 10% margin on each side:
 
 \begin{equation}
-
   s(d) = v_{min} + \bigg[ 0.1 + \frac{d - d_{min}}{d_{max} - d_{min}} \cdot (0.9 - 0.1) 
             \bigg] \cdot (v_{max} - v_{min}) 
   (\#eq:margins)
-
 \end{equation}
 
 Now, if we wanted these margins to be modifiable parameters as well, we should include them in the function signature:
 
 \begin{equation}
-
   s(d; m_{lower}, m_{upper}) = v_{min} + \bigg[ m_{lower} + \frac{d - d_{min}}{d_{max} - d_{min}} \cdot (m_{upper} - m_{lower}) 
             \bigg] \cdot (v_{max} - v_{min}) 
-
 \end{equation}
 
 Likewise, we should probably include the data and visual attribute limits in the function signature as well, i.e. $s(d; d_{min}, d_{max}, v_{min}, v_{max}, m_{lower}, m_{upper})$. However, as you can see, the function signature as well as the body start becoming fairly busy and hard to reason about, making this design prohibitive. For example, if we wanted to map some discrete data values to the same visual attribute codomain $V$, would we have to design an entirely new mapping function? Similarly, what if we want apply some other transformation, such as flipping the scale's direction? It would be useful if there were some way to abstract out the data domain $D$ and the visual attribute codomain $V$, such that we could apply some common operations to the scale regardless of its specific implementation.
@@ -1038,12 +1023,13 @@ $$  s(d) = v_{min} + \bigg[ 0.1 + \frac{d - d_{min}}{d_{max} - d_{min}} \cdot (0
 
 If we look closely, we may be able to see that the function can be split into three parts:
 
+\definecolor{steelblue}{RGB}{70, 130, 180}
+\definecolor{indianred}{RGB}{205, 92, 92}
+\definecolor{seagreen}{RGB}{46, 139, 87}
+
 \begin{equation}
-
 s(d) = \color{steelblue}{v_{min} +} \bigg[ \color{seagreen}{0.1 +} \color{indianred}{\frac{\color{black}{d} - d_{min}}{d_{max} - d_{min}}} \color{seagreen}{\cdot (0.9 - 0.1)} \bigg] \color{steelblue}{\cdot (v_{max} - v_{min})}
-  
 (\#eq:scale-composition)
-
 \end{equation}
 
 That is, the linear mapping can be interpreted as a composition of three simpler functions:
@@ -1121,10 +1107,8 @@ Importantly, the margins are independent of the data domain $D$ and the visual a
 Now, suppose we also want to pan the plot 25% to the right. Again, all we need to do is to change the parameters of the rescale function for the x-axis scale. For example, using the scale with 10% symmetric margins above, we can simply increment the margins by 0.25:
 
 \begin{align}
-
 r(p) &= (0.1 + 0.25) + p \cdot [(0.9 + 0.25) - (0.1 + 0.25)] \\
     &= 0.35 + p \cdot (1.15 - 0.35)
-
 \end{align}
 
 
