--- a/problems.Rmd
+++ b/problems.Rmd
@@ -8,7 +8,7 @@ editor_options:
 
 # Challenges {#problems}
 
-Designing an interactive data visualization system presents a unique set of challenges. Some of these have been already touched on in the Section \@ref(litreview). This section homes in on these inherent challenges, discusses them in greater depth, and begins exploring avenues for possible solutions.
+Designing an interactive data visualization system presents a unique set of challenges. Some of these have been already touched on in the Section \@ref(background). This section homes in on these inherent challenges, discusses them in greater depth, and begins exploring avenues for possible solutions.
 
 ## The structure of this chapter: Data visualization pipeline
 
@@ -70,7 +70,7 @@ Finally, there is the issue of data hiding due to missing or incomplete data, wh
 
 Either way, data hiding is something we should be mindful of. Unless there is a clear and justifiable reason, no data should be arbitrarily removed or discarded, and we should pick appropriate visual representations to display all of our data faithfully. In the ideal case, the visualization should present a clear and unambiguous mapping between the graphics and the data [@ziemkiewicz2009].
 
-### Comparison and disjointness
+### Comparison and disjointness {#comparison-disjointness}
 
 > "To be truthful and revealing, data graphics must bear on the question at the heart of quantitative thinking: 'compared to what'?" [@tufte2001, pp. 74].
 
@@ -201,14 +201,14 @@ The concept of "product of partitions" may be best illustrated with code example
 #| message: false
 
 df <- data.frame(group = factor(c("A", "A", "A", "B", "B", "C", "C", "C")),
-                 selection = factor(c(1, 1, 2, 1, 2, 1, 2, 2)),
+                 status = factor(c(1, 1, 2, 1, 2, 1, 2, 2)),
                  value = c(12, 21, 10, 9, 15, 15, 12, 13))
-df2 <- aggregate(value ~ group + selection, FUN = sum, data = df)
+df2 <- aggregate(value ~ group + status, FUN = sum, data = df)
 
 knitr::include_graphics("./figures/barplot-partitions-products.png")
 ```
 
-We start with the following data, which includes a categorical variable (`group`, plotted along the x-axis), a variable representing selection status (`selection`, used to colour the bar segments), and a continuous variable that we want to summarize (`value`):
+We start with the following data, which includes a categorical variable (`group`, plotted along the x-axis), a variable representing selection status (`status`, used to colour the bar segments), and a continuous variable that we want to summarize (`value`):
 
 ```{r}
 #| echo: false
@@ -216,50 +216,46 @@ We start with the following data, which includes a categorical variable (`group`
 library(kableExtra)
 
 render_table <- function(x, ...) {
-  knitr::kable(x, ...) |> kable_styling(full_width = FALSE)
+  kableExtra::kbl(x, ..., row.names = FALSE, booktabs = TRUE) |>
+    kableExtra::kable_styling(latex_options = c("hold_position"))
 } 
 
-render_tables <- function(x) {
-  # n <- length(x)
-  # n_pairs <- floor(n / 2)
-  # 
-  # for (i in seq_len(n_pairs)) {
-  #   cat(knitr::kables(lapply(x[(2 * i - 1):(2 * i)], render_table)))
-  # }
-  # 
-  # if (n %% 2 == 1) render_table(x[[length(x)]])
-  knitr::kable(x)
+render_tables <- function(x, ...) {
+  kableExtra::kbl(x, ..., row.names = FALSE, booktabs = TRUE) |>  
+    kableExtra::kable_styling(latex_options = c("scale_down", "hold_position"))
 }
 
-render_table(df, row.names = TRUE)
+render_table(df)
 ```
 
-To draw individual bar segments, we need to sum `value` across the subsets cases corresponding to each segment. To do this, we first need to split our data into multiple subsets corresponding to the partition formed by taking the product of `group` and `selection` variables.
-
-In R, the general data structure for representing partitions is the `factor` S3 class. In a `factor`, all elements of a vector are assigned a label, such that each label represent one disjoint part of the data. Unfortunately, there is no built-in function for creating a Cartesian product of two factors. However, we can easily emulate it using `paste` function to combine factor levels as strings element-wise:
+To draw individual bar segments, we summarize `value` across the cases corresponding to each segment. To do this, we first need to partition our data by the product of `group` and `status` variables. In R, partitions are typically represented `factor` S3 class, which is essentially just an integer vector with an associated vector of character labels. Unfortunately, there is no built-in function for creating a Cartesian product of two factors in R, however, we can easily emulate it using `paste0` function to combine `group` and `status` strings element-wise:
 
 ```{r}
-#| results: "asis"
-product_factor <- paste(df$group, df$selection)
+#| results: "hold"
+product_factor <- factor(paste0(df$group, df$status))
+product_factor
+
 split_dfs <- split(df, product_factor)
-render_tables(split_dfs)
+render_tables(split_dfs[0:2 * 2 + 1])
+render_tables(split_dfs[1:3 * 2])
 ```
 
 We can then summarize each small data set by summing `value`:
 
 ```{r}
-#| results: "asis"
+#| results: "hold"
 summarized_dfs <- lapply(split_dfs, function(x) {
   aggregate(value ~ ., data = x, sum)
 })
 
-render_tables(summarized_dfs)
+render_tables(summarized_dfs[0:2 * 2 + 1])
+render_tables(summarized_dfs[1:3 * 2])
 ```
 
 Finally, to "stack" the segments on top of each other, we need to combine the summaries back together, within the levels of `group` variable. We can do this by grouping the data sets by the `group` variable and taking their cumulative sum:
 
 ```{r}
-#| results: "asis"
+#| results: "hold"
 grouped_dfs <- split(summarized_dfs, sapply(summarized_dfs, function(x) x$group))
 stacked_dfs <- lapply(grouped_dfs, function(x) {
   x <- do.call(rbind, x)
@@ -277,10 +273,10 @@ Now, we can combine these tables into one `data.frame` and render:
 #| eval: false
 combined_df <- do.call(rbind, stacked_dfs)
 # Need to reverse factor and row order for ggplot2 to layer segments correctly
-combined_df$selection <- factor(combined_df$selection, levels = c(2, 1))
+combined_df$status <- factor(combined_df$status, levels = c(2, 1))
 combined_df <- combined_df[6:1, ] 
 
-ggplot(combined_df, aes(x = group, y = value, fill = selection)) +
+ggplot(combined_df, aes(x = group, y = value, fill = status)) +
   geom_col(position = position_identity())
 ```
 
@@ -555,7 +551,7 @@ My conclusion aligns fairly closely with @sievert2020, but diverges somewhat fro
 
 Let's briefly recap the key points so far. In section \@ref(partitioning), I advocated for modeling plots as a hierarchy of partitions, particularly a preorder of data subsets ordered by set union. Starting with the full data set, we divide it into disjoint subsets, each corresponding to a geometric object. These subsets can then be further subdivided, representing parts of those objects (such as those resulting from linked selection). As discussed in Section \@ref(hierarchy), we end up with a tree-like structure that encodes this part-whole relationship, which can be formally described as a preorder.
 
-Further, in Section \@ref(stacking-not-graphical), I demonstrated on the example \@ref(fig:barplot-maximums) that some "stackable" summary statistics have the property of preserving the part-whole relationships in the data hierarchy, whereas others do not. I have also and pointed to other researchers who have noted this problem. Additionally, I have argued that preserving these part-whole relationship in our visualizations is desirable, particularly when interaction is involved. They simplify certain interactive behaviors, make them more intuitive and "natural," and reduce the workload interactive data visualization systems need to do.
+Further, in Section \@ref(stacking-not-graphical), I demonstrated on the example \@ref(fig:grammar-barplot-maximums) that some "stackable" summary statistics have the property of preserving the part-whole relationships in the data hierarchy, whereas others do not. I have also and pointed to other researchers who have noted this problem. Additionally, I have argued that preserving these part-whole relationship in our visualizations is desirable, particularly when interaction is involved. They simplify certain interactive behaviors, make them more intuitive and "natural," and reduce the workload interactive data visualization systems need to do.
 
 Now it is finally time to discuss what makes certain statistics stackable. To do this, I will need to use some concepts from category theory. These concepts are described in greater detail in the [Appendix: Mathematical Theory](#mathematical-theory) - the reader is advised to consult this section if they are unfamiliar with the material (links to appropriate sections will also be provided throughout the text). As a final note, although category theory is a very complex field, only introductory concepts - which are sufficient for our purposes - will be used here.
 
